# amzn-drivers

./: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_issue.yml  feature_request.yml  support_request.yml
.github/workflows/: apisec-scan.yml  codacy.yml  codeql.yml
kernel/fbsd/ena/: LICENSE  Makefile  README  README.rst  RELEASENOTES.md  ena.c  ena.h  ena_datapath.c  ena_datapath.h  ena_netmap.c  ena_netmap.h  ena_rss.c  ena_rss.h  ena_sysctl.c  ena_sysctl.h  kcompat.h
kernel/linux/: ENA_Linux_Best_Practices.rst
kernel/linux/efa/: CMakeLists.txt  Makefile  Makefile.am  Makefile.common  Makefile.kernel  README  RELEASENOTES.md  SRD.txt  autogen.sh  build.sh  configure.ac  efa-abi.h  efa.h  efa_admin_cmds_defs.h  efa_admin_defs.h  efa_bitmap.c  efa_com.c  efa_com.h  efa_com_cmd.c  efa_com_cmd.h  efa_common_defs.h  efa_main.c  efa_pci_id_tbl.h  efa_regs_defs.h  efa_sysfs.c  efa_sysfs.h  efa_verbs.c  kcompat.h
kernel/linux/efa/conf/: configure-dkms-gdr.sh  configure-dkms.sh  dkms-gdr.conf  dkms.conf  efa-gdr.conf  efa-modprobe-gdr.conf  efa.conf
kernel/linux/efa/config/: Makefile  build-linux.m4  compile_conftest.sh  efa.cmake  efa.m4  main.c.in  run_parallel.sh  runbg.sh  wait_for_completion.sh  wait_for_pid.sh
kernel/linux/efa/debian/: changelog  control  efa.postinst  efa.prerm  rules
kernel/linux/efa/debian-gdr/: changelog  control  copyright  efa-gdr.postinst  efa-gdr.prerm  rules
kernel/linux/efa/rpm/: Makefile  efa-gdr.spec  efa.spec
kernel/linux/efa/src/: CMakeLists.txt  Kbuild.in  Makefile  Makefile.am  efa-abi.h  efa.h  efa_admin_cmds_defs.h  efa_com.c  efa_com.h  efa_com_cmd.c  efa_com_cmd.h  efa_common_defs.h  efa_data_verbs.c  efa_gdr.c  efa_gdr.h  efa_io_defs.h  efa_main.c  efa_neuron.c  efa_nvmem_impl.h  efa_nvmem_v1.c  efa_nvmem_v2.c  efa_p2p.c  efa_p2p.h  efa_regs_defs.h  efa_sysfs.c  efa_verbs.c  efa_verbs.h  kcompat.h  neuron_p2p.h  nv-p2p.h  nv-p2p_v2.h
kernel/linux/efa_nv_peermem/: CMakeLists.txt  COPYING  README  RELEASENOTES.md
kernel/linux/efa_nv_peermem/conf/: configure-dkms.sh  dkms.conf  efa_nv_peermem.conf
kernel/linux/efa_nv_peermem/debian/: changelog  control  copyright  efa-nv-peermem.postinst  efa-nv-peermem.prerm  rules
kernel/linux/efa_nv_peermem/rpm/: Makefile  efa-nv-peermem.spec
kernel/linux/efa_nv_peermem/src/: CMakeLists.txt  Kbuild.in  efa_nv_peermem.h  efa_nv_peermem_main.c  nv-p2p.h
kernel/linux/ena/: DEVLINK.rst  ENA_Linux_Best_Practices.rst  Makefile  README  README.rst  RELEASENOTES.md  configure.sh  dim.c  dim.h  ena_debug.c  ena_debug.h  ena_debugfs.c  ena_devlink.c  ena_devlink.h  ena_ethtool.c  ena_ethtool.h  ena_lpc.c  ena_lpc.h  ena_netdev.c  ena_netdev.h  ena_pci_id_tbl.h  ena_phc.c  ena_phc.h  ena_sysfs.c  ena_sysfs.h  ena_xdp.c  ena_xdp.h  kcompat.h  net_dim.c
kernel/linux/gvt_compress/: Makefile  README  RELEASENOTES.md  gvt_compress.h  gvt_compress_alg.c  gvt_compress_core.c  gvt_compress_device.c  gvt_compress_device.h  gvt_compress_device_init.c  gvt_compress_hdr.h  gvt_compress_pci.c  gvt_compress_regs.h  gvt_compress_sysfs.c
kernel/linux/rpm/: .gitignore  Makefile  README-rpm.txt  depmodconf  ena.files  ena.spec  find-provides.ksyms  find-requires.ksyms  kmodtool  preamble
kernel/macOS/ena/: ENA.cpp  ENA.hpp  ENAHash.cpp  ENAHash.hpp  ENALogs.hpp  ENANaiveHash.cpp  ENANaiveHash.hpp  ENAParallelOutputQueue.cpp  ENAParallelOutputQueue.hpp  ENAProperties.cpp  ENAProperties.hpp  ENARings.cpp  ENARings.hpp  ENATask.cpp  ENATask.hpp  ENATime.hpp  ENAToeplitzHash.cpp  ENAToeplitzHash.hpp  ENAUtils.cpp  ENAUtils.hpp  Info.plist  NOTICE  README  RELEASENOTES.md
userspace/dpdk/: README  README.md  RELEASENOTES.md  userspace - Shortcut.lnk
userspace/dpdk/16.04/: 0001-Backport-ENA-PMD-to-v16.04.patch  0002-net-ena-TX-L4-offload-flags-should-not-be-set-in-RX-.patch  0002-net-ena-do-not-set-Tx-L4-offloads-in-Rx-path.patch  0003-net-ena-check-pointer-before-memset.patch  0004-net-ena-change-memory-type.patch  0005-net-ena-fix-GENMASK_ULL-macro.patch  0006-net-ena-set-link-speed-as-none.patch  0007-net-ena-fix-SIGFPE-with-0-Rx-queue.patch  0008-net-ena-fix-passing-RSS-hash-to-mbuf.patch  0009-net-ena-add-supported-RSS-offloads-types.patch  0010-net-ena-fix-dev-init-with-multi-process.patch  0011-net-ena-get-device-info-statically.patch  0012-net-ena-fix-checksum-feature-flag.patch  0013-net-ena-fix-Rx-checksum-errors-statistics.patch  0014-net-ena-fix-assigning-NUMA-node-to-IO-queue.patch  0015-net-ena-base-fix-node-deallocation.patch  0016-net-ena-fix-indication-of-bad-L4-Rx-checksums.patch  0017-net-ena-ensure-Rx-buffer-size-is-at-least-1400B.patch  0018-net-ena-base-make-allocation-macros-thread-safe.patch  0019-net-ena-base-prevent-allocation-of-zero-sized-memory.patch  0020-net-ena-set-IO-ring-size-to-valid-value.patch  0021-net-ena-limit-refill-threshold-by-fixed-value.patch  0022-net-ena-avoid-false-l4-csum-validation-failures.patch
userspace/dpdk/16.11/: 0001-net-ena-cleanup-if-refilling-of-Rx-descriptors-fails.patch  0002-net-ena-fix-Rx-descriptors-allocation.patch  0003-net-ena-fix-delayed-cleanup-of-Rx-descriptors.patch  0004-net-ena-fix-cleanup-of-the-Tx-bufs.patch  0005-net-ena-add-memory-initialization-for-the-allocation.patch  0005-net-ena-base-initialize-memory-in-the-allocation-mac.patch  0006-net-ena-TX-L4-offload-flags-should-not-be-set-in-RX-.patch  0006-net-ena-do-not-set-Tx-L4-offloads-in-Rx-path.patch  0007-net-ena-check-pointer-before-memset.patch  0008-net-ena-change-memory-type.patch  0009-net-ena-fix-GENMASK_ULL-macro.patch  0010-net-ena-set-link-speed-as-none.patch  0011-net-ena-fix-SIGFPE-with-0-Rx-queue.patch  0012-net-ena-fix-passing-RSS-hash-to-mbuf.patch  0013-net-ena-add-supported-RSS-offloads-types.patch  0014-net-ena-update-completion-queue-after-cleanup.patch  0015-net-ena-fix-dev-init-with-multi-process.patch  0016-net-ena-get-device-info-statically.patch  0017-net-ena-fix-checksum-feature-flag.patch  0018-net-ena-fix-Rx-checksum-errors-statistics.patch  0019-net-ena-fix-assigning-NUMA-node-to-IO-queue.patch  (+8 more)
(+847 files in other folders)
